modif des couleurs

--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
         <nav>
             <a href="index.html"><img src="image/user.png" alt="Page d'acceuil"></a>
             <ul>
-                <li><a href="">info</a></li>
-                <li><a href="">projet</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="">Info</a></li>
+                <li><a href="">Projet</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
         <div class="container">
             <div class="cards">
-                <div class="card twitter">
+                <div class="card java">
                     <h2 class="card-title-large">Java</h2>
                     <h3 class="card-title-small">Java</h3>
                     <p class="card-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                        alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
-                        inventore magni molestias nihil nisi optio possimus praesentium
+                        Ici vous retrouverez certains de mes projets que 
+                        j'ai réalisé en Java au cours de ma formation en
+                        BUT informatique.
                     </p>
                     <a href="#" class="card-cta">&rarr;</a>
                 </div>
-                <div class="card instagram">
-                    <h2 class="card-title-large">Instagram</h2>
-                    <h3 class="card-title-small">Instagram</h3>
+                <div class="card sql">
+                    <h2 class="card-title-large">SQL</h2>
+                    <h3 class="card-title-small">SQL</h3>
                     <p class="card-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                        alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
-                        inventore magni molestias nihil nisi optio possimus praesentium
+                        Ici vous retrouverez certains de mes projets que 
+                        j'ai réalisé en SQL au cours de ma formation en
+                        BUT informatique.
                     </p>
                     <a href="#" class="card-cta">&rarr;</a>
                 </div>
@@ -64,6 +64,8 @@
                     </p>
                     <a href="#" class="card-cta">&rarr;</a>
                 </div>
+
+                
             </div>
         </div>
 </body>
