--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <a href="#" class="card-cta">&rarr;</a>
                 </div>
 
-                <div class="card facebook">
-                    <h2 class="card-title-large">Facebook</h2>
-                    <h3 class="card-title-small">Facebook</h3>
+                <div class="card oui">
+                    <h2 class="card-title-large">test</h2>
+                    <h3 class="card-title-small">test</h3>
                     <p class="card-description">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
                         alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
@@ -54,9 +54,9 @@
                     <a href="#" class="card-cta">&rarr;</a>
                 </div>
 
-                <div class="card youtube">
-                    <h2 class="card-title-large">YouTube</h2>
-                    <h3 class="card-title-small">YouTube</h3>
+                <div class="card non">
+                    <h2 class="card-title-large">test</h2>
+                    <h3 class="card-title-small">test</h3>
                     <p class="card-description">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
                         alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
