--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <link rel="shortcut icon" href="image/photos.png" type="image/png">
+    <title>Portfolio de Mathis Durand</title>
 </head>
 
 <body>
@@ -30,7 +31,7 @@
                         j'ai réalisé en Java au cours de ma formation en
                         BUT informatique.
                     </p>
-                    <a href="#" class="card-cta">&rarr;</a>
+                    <a href="retex/Odomo.pdf" target="_blank" class="card-cta">&rarr;</a>
                 </div>
                 <div class="card sql">
                     <h2 class="card-title-large">SQL</h2>
