ajout du contact

--- a/index.html
+++ b/index.html
@@ -17,58 +17,58 @@
             <ul>
                 <li><a href="">Info</a></li>
                 <li><a href="">Projet</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-        <div class="container">
-            <div class="cards">
-                <div class="card java">
-                    <h2 class="card-title-large">Java</h2>
-                    <h3 class="card-title-small">Java</h3>
-                    <p class="card-description">
-                        Ici vous retrouverez certains de mes projets que 
-                        j'ai réalisé en Java au cours de ma formation en
-                        BUT informatique.
-                    </p>
-                    <a href="retex/Odomo.pdf" target="_blank" class="card-cta">&rarr;</a>
-                </div>
-                <div class="card sql">
-                    <h2 class="card-title-large">SQL</h2>
-                    <h3 class="card-title-small">SQL</h3>
-                    <p class="card-description">
-                        Ici vous retrouverez certains de mes projets que 
-                        j'ai réalisé en SQL au cours de ma formation en
-                        BUT informatique.
-                    </p>
-                    <a href="#" class="card-cta">&rarr;</a>
-                </div>
-
-                <div class="card oui">
-                    <h2 class="card-title-large">test</h2>
-                    <h3 class="card-title-small">test</h3>
-                    <p class="card-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                        alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
-                        inventore magni molestias nihil nisi optio possimus praesentium
-                    </p>
-                    <a href="#" class="card-cta">&rarr;</a>
-                </div>
-
-                <div class="card non">
-                    <h2 class="card-title-large">test</h2>
-                    <h3 class="card-title-small">test</h3>
-                    <p class="card-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                        alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
-                        inventore magni molestias nihil nisi optio possimus praesentium
-                    </p>
-                    <a href="#" class="card-cta">&rarr;</a>
-                </div>
-
-                
+    <div class="container">
+        <div class="cards">
+            <div class="card java">
+                <h2 class="card-title-large">Java</h2>
+                <h3 class="card-title-small">Java</h3>
+                <p class="card-description">
+                    Ici vous retrouverez certains de mes projets que
+                    j'ai réalisé en Java au cours de ma formation en
+                    BUT informatique.
+                </p>
+                <a href="retex/Odomo.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
+            <div class="card sql">
+                <h2 class="card-title-large">SQL</h2>
+                <h3 class="card-title-small">SQL</h3>
+                <p class="card-description">
+                    Ici vous retrouverez certains de mes projets que
+                    j'ai réalisé en SQL au cours de ma formation en
+                    BUT informatique.
+                </p>
+                <a href="#" class="card-cta">&rarr;</a>
+            </div>
+
+            <div class="card oui">
+                <h2 class="card-title-large">test</h2>
+                <h3 class="card-title-small">test</h3>
+                <p class="card-description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+                    alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
+                    inventore magni molestias nihil nisi optio possimus praesentium
+                </p>
+                <a href="#" class="card-cta">&rarr;</a>
+            </div>
+
+            <div class="card non">
+                <h2 class="card-title-large">test</h2>
+                <h3 class="card-title-small">test</h3>
+                <p class="card-description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+                    alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
+                    inventore magni molestias nihil nisi optio possimus praesentium
+                </p>
+                <a href="#" class="card-cta">&rarr;</a>
+            </div>
+
+
         </div>
+    </div>
 </body>
 
 </html>
