--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="index.html"><img src="image/user.png" alt="Page d'acceuil"></a>
             <ul>
-                <li><a href="">Info</a></li>
+                <li><a href="info.html">Info</a></li>
                 <li><a href="">Projet</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
