--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="image/user.png" alt="Page d'acceuil"></a>
+            <!-- <a href="index.html"><img src="image/user.png" alt="Page d'acceuil"></a> -->
+            <div class="photo"></div>
             <ul>
                 <li><a href="info.html">Info</a></li>
                 <li><a href="">Projet</a></li>
@@ -27,9 +28,11 @@
                 <h2 class="card-title-large">Java</h2>
                 <h3 class="card-title-small">Java</h3>
                 <p class="card-description">
-                    Ici vous retrouverez certains de mes projets que
-                    j'ai réalisé en Java au cours de ma formation en
-                    BUT informatique.
+                    - Odomo
+                    <br>
+                    - Biosphere 7
+                    <br>
+                    - Atelier de prog pour une JPO
                 </p>
                 <a href="retex/Odomo.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
@@ -37,9 +40,8 @@
                 <h2 class="card-title-large">SQL</h2>
                 <h3 class="card-title-small">SQL</h3>
                 <p class="card-description">
-                    Ici vous retrouverez certains de mes projets que
-                    j'ai réalisé en SQL au cours de ma formation en
-                    BUT informatique.
+                    - Conception d'une base de donnée
+                    <br>
                 </p>
                 <a href="#" class="card-cta">&rarr;</a>
             </div>
