remise en place du btn home

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
     <header>
         <nav>
-            <!-- <a href="index.html"><img src="image/user.png" alt="Page d'acceuil"></a> -->
-            <div class="photo"></div>
+            <a href="index.html"><img src="image/user.png" alt="Page d'acceuil"></a>
             <ul>
                 <li><a href="info.html">Info</a></li>
                 <li><a href="">Projet</a></li>
