retex final java

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <br>
                     - Atelier de prog pour une JPO
                 </p>
-                <a href="retex/Odomo.pdf" target="_blank" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX Java.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
             <div class="card sql">
                 <h2 class="card-title-large">SQL</h2>
