ajout des retex

--- a/index.html
+++ b/index.html
@@ -42,29 +42,25 @@
                     - Conception d'une base de donnée
                     <br>
                 </p>
-                <a href="#" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX SQL.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
 
-            <div class="card oui">
-                <h2 class="card-title-large">test</h2>
-                <h3 class="card-title-small">test</h3>
+            <div class="card bash">
+                <h2 class="card-title-large">Bash</h2>
+                <h3 class="card-title-small">Bash</h3>
                 <p class="card-description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                    alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
-                    inventore magni molestias nihil nisi optio possimus praesentium
+                    - Installation d'un poste pour le développement
                 </p>
-                <a href="#" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX BASH.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
 
-            <div class="card non">
-                <h2 class="card-title-large">test</h2>
-                <h3 class="card-title-small">test</h3>
+            <div class="card web">
+                <h2 class="card-title-large">HTML</h2>
+                <h3 class="card-title-small">HTML</h3>
                 <p class="card-description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                    alias, aliquid aperiam deleniti doloremque dolores est fugiat, illum
-                    inventore magni molestias nihil nisi optio possimus praesentium
+                    - Site web pour une entreprise d'analyse
                 </p>
-                <a href="#" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX WEB.pdf" class="card-cta">&rarr;</a>
             </div>
 
 
