ajout compétence page

--- a/competence.html
+++ b/competence.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
     <div class="timeline">
         <div class="conteneur left">
             <div class="content">
-                <h2>Qui je suis ?</h2>
+                <h2>Travail d'équipe</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
                     ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
                     voluptatum voluptatibus quo odit facere?</p>
@@ -37,10 +37,28 @@
         </div>
         <div class="conteneur left">
             <div class="content">
-                <h2>Qui je suis ?</h2>
+                <h2>Testing</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
                     ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
                     voluptatum voluptatibus quo odit facere?</p>
+            </div>
+        </div>
+        <div class="conteneur right">
+            <div class="content">
+                <img src="image/ppGucci.jpg" alt="">
+            </div>
+        </div>
+        <div class="conteneur left">
+            <div class="content">
+                <h2>Anglais</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
+                    ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
+                    voluptatum voluptatibus quo odit facere?</p>
+            </div>
+        </div>
+        <div class="conteneur right">
+            <div class="content">
+                <img src="image/ppGucci.jpg" alt="">
             </div>
         </div>
     </div>
