--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="image/user.png" alt="Page d'acceuil"></a>
+            <a href="index.html"><img src="image/home.png" alt="Page d'acceuil"></a>
             <ul>
                 <li><a href="info.html">Info</a></li>
-                <li><a href="#">Projet</a></li>
+                <li><a href="competence.html">Compétence</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
