--- a/competence.html
+++ b/competence.html
@@ -25,27 +25,29 @@
         <div class="conteneur left">
             <div class="content">
                 <h2>Travail d'équipe</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
-                    ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
-                    voluptatum voluptatibus quo odit facere?</p>
+                <p>Dans le cadre de ma formation en BUT informatique j'ai eu l'opportunité d'apprendre à faire du
+                    développement en équipe. J'ai pu apprendre à utiliser des outils comme Git afin de maintenir une
+                    bonne qualité de code.</p>
             </div>
         </div>
         <div class="conteneur right">
             <div class="content">
-                <img src="image/ppGucci.jpg" alt="">
+                <img src="image/git.png" alt="">
             </div>
         </div>
         <div class="conteneur left">
             <div class="content">
                 <h2>Testing</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
-                    ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
-                    voluptatum voluptatibus quo odit facere?</p>
+                <p>Dans le cadre de ma formation en BUT informatique j'ai eu l'opportunité d'apprendre à mettre en place
+                    des tests unitaires et d'intégration. J'ai pu apprendre à utiliser des outils comme JUnit afin de
+                    maintenir une bonne qualité de code.</p>
+
+                </p>
             </div>
         </div>
         <div class="conteneur right">
             <div class="content">
-                <img src="image/ppGucci.jpg" alt="">
+                <img src="image/essai.png" alt="">
             </div>
         </div>
         <div class="conteneur left">
