fin page compétence

--- a/competence.html
+++ b/competence.html
@@ -32,7 +32,7 @@
         </div>
         <div class="conteneur right">
             <div class="content">
-                <img src="image/git.png" alt="">
+                <img src="image/git.png" alt="git">
             </div>
         </div>
         <div class="conteneur left">
@@ -47,20 +47,18 @@
         </div>
         <div class="conteneur right">
             <div class="content">
-                <img src="image/essai.png" alt="">
+                <img src="image/essai.png" alt="test">
             </div>
         </div>
         <div class="conteneur left">
             <div class="content">
-                <h2>Anglais</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
-                    ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
-                    voluptatum voluptatibus quo odit facere?</p>
+                <h2>Langues étrangères</h2>
+                <p>Je parle anglais courament, j'ai un niveau basique en espagnol.</p>
             </div>
         </div>
         <div class="conteneur right">
             <div class="content">
-                <img src="image/ppGucci.jpg" alt="">
+                <img src="image/bonjour.png" alt="bonjour">
             </div>
         </div>
     </div>
