--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <a href="index.html"><img src="image/home.png" alt="Page d'acceuil"></a>
             <ul>
-                <li><a href="info.html">Info</a></li>
-                <li><a href="competence.html">Compétence</a></li>
+                <li><a href="info.html">Infos</a></li>
+                <li><a href="competence.html">Compétences</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
