--- a/info.html
+++ b/info.html
@@ -15,8 +15,8 @@
         <nav>
             <a href="index.html"><img src="image/home.png" alt="Page d'acceuil"></a>
             <ul>
-                <li><a href="info.html">Info</a></li>
-                <li><a href="competence.html">Compétence</a></li>
+                <li><a href="info.html">Infos</a></li>
+                <li><a href="competence.html">Compétences</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -25,22 +25,24 @@
         <div class="conteneur left">
             <div class="content">
                 <h2>Qui je suis ?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
-                    ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
-                    voluptatum voluptatibus quo odit facere?</p>
+                <p>Je m'appel Mathis Durand, je suis actuellement en 1<sup>er</sup> année de BUT informatique.</p>
             </div>
         </div>
         <div class="conteneur right">
             <div class="content">
-                <img src="image/ppGucci.jpg" alt="">
+                <img src="image/Cmoi.jpg" alt="Cmoi">
             </div>
         </div>
         <div class="conteneur left">
             <div class="content">
-                <h2>Qui je suis ?</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa a sint aut voluptatibus. Voluptatem
-                    ipsum atque impedit accusantium, quod soluta assumenda doloribus recusandae incidunt illum
-                    voluptatum voluptatibus quo odit facere?</p>
+                <h2>Mes passions</h2>
+                <p>Depuis mon tout jeune âge je suis passionné de jeux vidéo grace à eux (FPS) j'ai appris à prendre des
+                    décisions dans l'urgence. Je suis aussi passionné par la culture générale.</p>
+            </div>
+        </div>
+        <div class="conteneur right">
+            <div class="content">
+                <img src="image/ps4.png" alt="passion">
             </div>
         </div>
     </div>
