correction de bug

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <p class="card-description">
                     - Site web pour une entreprise d'analyse
                 </p>
-                <a href="retex/RETEX WEB.pdf" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX WEB.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
 
 
