--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,15 @@
         <h2>Me contacter</h2>
         <form>
             <div class="user-box">
-                <input type="text" name="" required="">
+                <input type="text" name="nom" required>
                 <label>Nom</label>
             </div>
             <div class="user-box">
-                <input type="mail" name="" required="">
+                <input type="mail" name="mail" required>
                 <label>Email</label>
             </div>
             <div class="user-box">
-                <input type="text" name="" required="">
+                <input type="text" name="sujet" required>
                 <label>Sujet</label>
             </div>
             <a href="#">
