correction de bug

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 <label>Nom</label>
             </div>
             <div class="user-box">
-                <input type="mail" name="mail" required>
+                <input type="email" name="mail" required>
                 <label>Email</label>
             </div>
             <div class="user-box">
