--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <br>
                     - Atelier de prog pour une JPO
                 </p>
-                <a href="retex/RETEX Java.pdf" target="_blank" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX_Java.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
             <div class="card sql">
                 <h2 class="card-title-large">SQL</h2>
@@ -42,7 +42,7 @@
                     - Conception d'une base de donnée
                     <br>
                 </p>
-                <a href="retex/RETEX SQL.pdf" target="_blank" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX_SQL.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
 
             <div class="card bash">
@@ -51,7 +51,7 @@
                 <p class="card-description">
                     - Installation d'un poste pour le développement
                 </p>
-                <a href="retex/RETEX BASH.pdf" target="_blank" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX_BASH.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
 
             <div class="card web">
@@ -60,7 +60,7 @@
                 <p class="card-description">
                     - Site web pour une entreprise d'analyse
                 </p>
-                <a href="retex/RETEX WEB.pdf" target="_blank" class="card-cta">&rarr;</a>
+                <a href="retex/RETEX_WEB.pdf" target="_blank" class="card-cta">&rarr;</a>
             </div>
 
 
