--- a/competence.html
+++ b/competence.html
@@ -40,8 +40,7 @@
                 <h2>Testing</h2>
                 <p>Dans le cadre de ma formation en BUT informatique j'ai eu l'opportunité d'apprendre à mettre en place
                     des tests unitaires et d'intégration. J'ai pu apprendre à utiliser des outils comme JUnit afin de
-                    maintenir une bonne qualité de code.</p>
-
+                    maintenir une bonne qualité de code.
                 </p>
             </div>
         </div>
