--- a/competence.html
+++ b/competence.html
@@ -25,9 +25,11 @@
         <div class="conteneur left">
             <div class="content">
                 <h2>Travail d'équipe</h2>
-                <p>Dans le cadre de ma formation en BUT informatique j'ai eu l'opportunité d'apprendre à faire du
-                    développement en équipe. J'ai pu apprendre à utiliser des outils comme Git afin de maintenir une
-                    bonne qualité de code.</p>
+                <p>Au cours de ma formation en BUT informatique, j'ai eu l'opportunité d'acquérir des compétences
+                    solides en développement en équipe. J'ai été initié à l'utilisation d'outils tels que Git, qui m'a
+                    permis de maintenir une qualité de code irréprochable. De plus, j'ai développé une expertise dans la
+                    collaboration au sein d'équipes de projet, en apprenant à travailler efficacement avec mes pairs.
+                </p>
             </div>
         </div>
         <div class="conteneur right">
@@ -38,9 +40,9 @@
         <div class="conteneur left">
             <div class="content">
                 <h2>Testing</h2>
-                <p>Dans le cadre de ma formation en BUT informatique j'ai eu l'opportunité d'apprendre à mettre en place
-                    des tests unitaires et d'intégration. J'ai pu apprendre à utiliser des outils comme JUnit afin de
-                    maintenir une bonne qualité de code.
+                <p>J'ai aussi eu l'opportunité d'apprendre à mettre en place des tests unitaires et d'intégration. J'ai
+                    pu apprendre à utiliser des outils comme JUnit afin de
+                    maintenir une bonne qualité de code et de pouvoir tester mon code.
                 </p>
             </div>
         </div>
@@ -52,7 +54,10 @@
         <div class="conteneur left">
             <div class="content">
                 <h2>Langues étrangères</h2>
-                <p>Je parle anglais courament, j'ai un niveau basique en espagnol.</p>
+                <p>En tant que développeur, j'ai développé une compétence solide en matière de développement en anglais.
+                    Je suis capable de lire, comprendre et écrire du code en anglais, qui est la langue universelle de
+                    programmation. De plus, je suis à l'aise pour communiquer avec des collaborateurs anglophones, que
+                    ce soit lors de discussions techniques, de revues de code ou de la participation à des projets.</p>
             </div>
         </div>
         <div class="conteneur right">
