--- a/info.html
+++ b/info.html
@@ -25,7 +25,7 @@
         <div class="conteneur left">
             <div class="content">
                 <h2>Qui je suis ?</h2>
-                <p>Je m'appel Mathis Durand, j'ai 21 ans et je suis actuellement en 1<sup>er</sup> année de BUT
+                <p>Je m’appelle Mathis Durand, j'ai 21 ans et je suis actuellement en 1<sup>er</sup> année de BUT
                     informatique.
                 </p>
             </div>
